	   the cursor really didn't change, it's more like a new cursor.
	   Also, when setting position, don't do anything if position is as it
	   was.

2011-05-27  Carsten Haitzler (The Rasterman)

	* Improve performance on create/delete of edje objects by using
        evas freeze and thaw calls. May help in certain pathological
        situations.

2011-05-27  Cedric Bail

	* Improve performance by avoiding walking eina_list for nothing
	when deleting member_class.

2011-06-09  Cedric Bail

	* Fix external usage in sub group to have the proper parents.

2011-06-11  Tom Hacohen (TAsn)

	* Fix an issue with ellipsis not working properly with small
	  text parts.

2011-06-21  Cedric Bail

	* Make it possible to define part.description.max only on one axis.

2011-07-24  Mike Blumenkrantz

        * Add signals entry,paste,request,1 (PRIMARY) and entry,paste,request,3 (CLIPBOARD)
          to differentiate between paste types
        * Add entry,selection,all,request for signalling ctrl+a in an entry
        * Add entry,selection,none,request for signalling ctrl+shift+a in an entry
        * Fix entry,paste,request* to be emitted after cursor,changed (fixes middle mouse paste location)

2011-05-27  Carsten Haitzler (The Rasterman)

	* Fix edje_shutdown() being called before all evas objects created
        by edje (edje objects) are gone. Delay internal core shutdown
        until all references gone.

2011-08-03  Tom Hacohen (TAsn)

	* Entry: Added changed,user signal. This signal indicates the entry
	has changed because of user interaction, i.e not by code.

2011-08-22  Cedric Bail

	* Add collection.group.limits {
	          vertical: "name" value;
	          horizontal: "name" value;
	      }.

2011-08-25  Jihoon Kim

	* Add entry input panel layout setting api's

2011-08-29  Jaehwan Kim

	* Add group's inheritance.
	* Add insert_before, insert_after to can change the part's order.

2011-10-02  Boris Faure (billiob)

	* Fix edje_cc to accept -1 in description.max